<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">


        <item
            android:id="@+id/add"
            android:icon="@android:drawable/ic_menu_add"
            app:showAsAction="always"
            android:title="@string/add"/>
        <item
            android:id="@+id/profile"
            android:icon="@mipmap/ic_launcher_round"
            app:showAsAction="always"
            android:title="@string/add"/>
        <item
            android:id="@+id/about"
            android:icon="@android:drawable/ic_dialog_info"
            app:showAsAction="never"
            android:title="@string/about">
        </item>
        <item
            android:id="@+id/prefs"
            app:showAsAction="never"
            android:title="@string/preference">
        </item>
        <item
            android:id="@+id/refresh"
            android:icon="@android:drawable/ic_popup_sync"
            android:title="@string/refresh"
            app:showAsAction="always">
        </item>
        <item
            android:id="@+id/logout"
            android:icon="@android:drawable/ic_popup_sync"
            android:title="@string/logout"
            app:showAsAction="never">
        </item>
    </menu>
